Final draft commit

--- a/model/results.tex
+++ b/model/results.tex
@@ -11,7 +11,7 @@ It is necessary to ensure that the gases used in each experiment are correctly c
 
 %When this factor was then taken into account it became possible to compute both model's with the correct SO$_2$ mixing ratio. When this was done the data fit the model's lineshape and absorption. This is also the reason that the SO$_2$ mixing ratio and CO$_2$ mixing ratio do not add up to 100\%.
 
-The CO$_2$ tank used was the same tank used in Steffes et al. \cite{Steffes-2014}. Since the CO$_2$ absorption measured in that paper matched the previously published formalism for opacity and refractive index of CO$_2$ \cite{Ho-1966} it can be assumed that the tank contained pure CO$_2$.
+The CO$_2$ tank used was the same tank used in Steffes et al. \cite{Steffes-2014}. Since the CO$_2$ absorption measured in that paper matched the previously published formalism for opacity and refractive index of CO$_2$ \cite{Ho-1966}, it can be assumed that the tank contained pure CO$_2$.
 
 %\subsection{Data}
 
