--- a/summary/summary.tex
+++ b/summary/summary.tex
@@ -12,9 +12,9 @@ One such radio telescope is the Combined Array for Research in Millimeter-wave A
 
 Along with CARMA, other observations of Venus have been made. One such observation was done by Sagawa \cite{Sagawa-2008}. Sagawa mentions it is possible to extract abundance profiles for both SO$_2$ and H$_2$SO$_4$ from observations done at two different frequencies. This requires knowledge of the frequency dependence of the absorption from both gasses. While this work characterizes the absorption of SO$_2$, work is still needed to characterize H$_2$SO$_4$'s absorption spectrum in the millimeter-wavelength regime. 
 
-Sub-millimeter-wavelength observations where done with ALMA (Atacama Large Millimeter Array) in 2011 \cite{ALMA-2013}. These observations were the first high-resolution mapping of the day hemisphere at millimeter-wavelengths. They showed how the mesosphere was affected by solar-winds, the mesospheric water distribution, and the moderate equatorial zonal winds. Using this data along with the developed RTM and methods described in Sagawa \cite{Sagawa-2008}, it is possible to retrieve an abundance profile for multiple constituents of Venus's atmosphere.
+Sub-millimeter-wavelength observations were done with ALMA (Atacama Large Millimeter Array) in 2011 \cite{ALMA-2013}. These observations were the first high-resolution mapping of the day hemisphere at millimeter-wavelengths. They showed how the mesosphere was affected by solar-winds, the mesospheric water distribution, and the moderate equatorial zonal winds. Using this data along with the developed RTM and methods described in Sagawa \cite{Sagawa-2008}, it is possible to retrieve an abundance profile for multiple constituents of Venus' upper atmosphere.
 
 \section{Suggestions for Future Work}
-Many improvements can be made to the newly-developed RTM. The biggest is an accurate formalism for the millimeter-wavelength absorption of H$_2$SO$_4$. The formalism used in the current model was developed from centimeter-wavelength data. A new laboratory measurement system to better characterize H$_2$SO$_4$'s millimeter-wavelength absorption spectrum is being developed at Georgia Institute of Technology's Planetary Atmospheres Lab. These measurements, along with those from Kolodner et al. \cite{Kolodner-1998} should help develop a formalism for H$_2$SO$_4$ absorption spectra at centimeter and millimeter-wavelengths. 
+Many improvements can be made to the newly-developed RTM. The biggest is an accurate formalism for the millimeter-wavelength absorption of gaseous H$_2$SO$_4$. The formalism used in the current model was developed from centimeter-wavelength data. A new laboratory measurement system to better characterize gaseous H$_2$SO$_4$'s millimeter-wavelength absorption spectrum is being developed at Georgia Institute of Technology's Planetary Atmospheres Lab. These measurements, along with those from Kolodner et al. \cite{Kolodner-1998} should help develop a formalism for the gaseous H$_2$SO$_4$ absorption spectra at centimeter and millimeter-wavelengths. 
 
-The development of a Radiative Transfer Model is the first step in creating an inverse model of the Venus atmosphere. Creation of such model will allow for retrieval of abundance profiles and temperature-pressure profiles from observations of the planet. A retrieval algorithms has been developed for H$_2$SO$_4$ and temperature at centimeter wavelengths (Jenkins et al. \cite{Jenkins-2002}).
+The development of a Radiative Transfer Model is the first step in creating an ability to retrieve constituent abundances in the Venus atmosphere. Creation of such model will allow for retrieval of abundance profiles and temperature-pressure profiles from observations of the planet. A centimeter wavelengths retrieval algorithms has already been developed for gaseous H$_2$SO$_4$ and temperature (Jenkins et al. \cite{Jenkins-2002}). These results will carry such work into the millimeter-wave spectrum.
