--- a/rtm/vector-rtm.tex
+++ b/rtm/vector-rtm.tex
@@ -9,7 +9,7 @@ a_i = iz_{step}
 where $a_i$ is the $i^{th}$ element in the vector and $z_{step}$ is the distance between each atmospheric layer. 
 
 The TCM for Venus requires a latitude of observation. This is due to the latitudinal variations of the temperature-pressure profiles of the planet. 
-Using the altitude vector, \textbf{a}, it is possible to calculate the T-P profiles of the interested atmospheric layers using a one dimension interpolation of the T-P profiles as reported by the Pionner-Venus sounder and north probes. 
+Using the altitude vector, \textbf{a}, it is possible to calculate the T-P profiles of the atmospheric layers of interest using a one dimension interpolation of the T-P profiles as reported by the Pionner-Venus sounder and north probes. 
 The temperature and pressure vectors are \textbf{T} and \textbf{P} respectively. Using the \textbf{T} and \textbf{P}, it will be possible to create a vector for all constituents mixing ratio $\textbf{Q}_{c}$, with $c$ being the constituent of interest. The refractive index vector \textbf{N} can be calculated using the same methods as $\textbf{Q}_{c}$. The vectors \textbf{T}, \textbf{P}, $\textbf{Q}_{c}$, and \textbf{N} are of size $N\times 1$.
 
 \subsection{Absorption Matrix}
