Changed all pressures to bars

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -309,7 +309,6 @@ number = {6},
 issn = {1944-799X},
 url = {http://dx.doi.org/10.1029/2007RS003693},
 doi = {10.1029/2007RS003693},
-pages = {n/a--n/a},
 keywords = {microwave, gas, measurement},
 year = {2007}
 }
@@ -440,8 +439,8 @@ author = "C.Y. Na and L.W. Esposito and W.E. McClintock and C.A. Barth"
 }
 
 
-@book{Matthael-1980,
-    author    = "G. L. Matthael and E. Jones",
+@book{Matthaei-1980,
+    author    = "G. L. Matthaei and E. Jones",
     title     = {Microwave filters, impedance matching networks and coupling structures},
     publisher = "McGraw-Hill",
     address  = "New York",
@@ -470,7 +469,7 @@ author = "C.Y. Na and L.W. Esposito and W.E. McClintock and C.A. Barth"
 @article{Sagawa-2008,
 author = "H. Sagawa",
 year = "2008",
-title = {Teraherts remote sensing of the {V}enusian atmosphere: {O}bservations {U}sing the {N}obeyama {M}illimeter {A}rray},
+title = {Terahertz remote sensing of the {V}enusian atmosphere: {O}bservations {U}sing the {N}obeyama {M}illimeter {A}rray},
 journal = {Journal of the National Institute of Information and Communications Technology},
 address = "Japan",
 volume = "55",
@@ -486,7 +485,6 @@ number = {2},
 issn = {1944-799X},
 url = {http://dx.doi.org/10.1029/2010RS004433},
 doi = {10.1029/2010RS004433},
-pages = {n/a--n/a},
 keywords = {millimeter wavelength, planetary atmospheres, gas opacity, quality factor, Fabry-Perot resonator},
 year = {2011}
 }
