--- a/intro/intro.tex
+++ b/intro/intro.tex
@@ -14,7 +14,7 @@ Radio absorptivity data from planetary atmospheres can be used to infer abundanc
 Using the measured millimeter-wavelength absorption spectra of SO$_2$ in a CO$_2$ atmosphere and the resulting opacity formalism, a radiative transfer model (RTM), has now been produced. The model can be applied to earth-based and spacecraft-based radio emission measurements so as to provide planetary maps of SO$_2$ abundances at all altitudes of the Venus atmosphere. %Using this model along with observations from Sagawa \cite{observations} it will be possible to identify vertical abundances of SO$_2$ in different places of the Venus atmosphere. 
 This model can be applied to earth-based millimeter-wavelength observations of Venus so as to provide planetary maps of sulfuric acid vapor and sulfur dioxide abundances at and immediately below the main cloud layer. Interpretation of such observations will complement the study of long-term variations of SO$_2$ variations at the 70 km altitude level made with Venus-orbiting ultraviolet(uv) spectrometers \cite{Esposito-2012}. 
 
-It is well understood that the microwave emission spectrum of Venus reflects the abundance and distribution of its constituents. The most critical limiting factor in sensing these constituents is the knowledge of there microwave absorption properties under a Venus atmosphere. 
+It is well understood that the microwave emission spectrum of Venus reflects the abundance and distribution of its constituents. The most critical limiting factor in sensing these constituents is the knowledge of their microwave absorption properties under a Venus atmosphere. 
 The millimeter-wavelength absorption of SO$_2$ at 94.1 GHz has been measured by Fahd and Steffes, \cite{Fahd-thesis}. 
 Using newer technology it is possible to measure more resonances with higher precision. Improved laboratory capabilities also allow for a wider range of environmental conditions, similar to those actually being probed, to be simulated. The millimeter-wavelength system used is able to reproduce conditions similar to those that exist on Venus. The centimeter-wave absorption spectra already measured by Steffes et al. \cite{Steffes-2014} has been used to help choose a model that best represents the centimeter- and millimeter-wavelength opacity of SO$_2$ in a CO$_2$ atmosphere \cite{Butler-2001}. 
 
