--- a/model/results.tex
+++ b/model/results.tex
@@ -1,6 +1,6 @@
 \clearpage
 \section{Experimental Results}
-High accuracy laboratory measurements of the temperature and pressure dependence of the millimeter-wavelength absorption of gaseous SO$_2$ in a CO$_2$ atmospheres have been conducted at 308K and 345 K and at pressures from 30 mbar to 3 bars for wavelengths between 2-4 millimeters. The following plots show the results of these absorptivity measurements with the accompanying 2$\sigma$ uncertainties. For comparison purposes these plots also show two known formalisms of SO$_2$'s absorptivity. One developed by Suleiman et al. 1997 \cite{Suleiman-thesis} and the second by Fahd and Steffes \cite{Fahd-thesis} but using the new JPL line catalog \cite{Pickett-1998}. 
+High accuracy laboratory measurements of the temperature and pressure dependence of the millimeter-wavelength absorption of gaseous SO$_2$ in a CO$_2$ atmosphere have been conducted at 308K and 345 K and at pressures from 30 mbar to 3 bars for wavelengths between 2-4 millimeters. The following plots show the results of these absorptivity measurements with the accompanying 2$\sigma$ uncertainties. For comparison purposes these plots also show two known formalisms of SO$_2$'s absorptivity. One developed by Suleiman et al. 1997 \cite{Suleiman-thesis} and the second by Fahd and Steffes \cite{Fahd-thesis} but using the new JPL line catalog \cite{Pickett-1998}. 
 
 \subsection{Accuracy of Constituents}
 
