--- a/rtm/results.tex
+++ b/rtm/results.tex
@@ -6,7 +6,7 @@ For the lower frequencies our computed $T_D$ is much higher then the measured va
 Figure \ref{fig:weight} shows the weighting function of various frequencies. Changing the SO$_2$ and H$_2$SO$_4$ abundance profiles will results in a change in the weighting functions as well as the disk-averaged temperature.
 \begin{table}[h]
  \centering 
-\caption{Mesured Disk-Averaged Brightness Temperatures of Venus for Various Frequencies as compared to the reults from the new Radiative Transfer Model}
+\caption{Measured Disk-Averaged Brightness Temperatures of Venus for Various Frequencies as compared to the reults from the new Radiative Transfer Model}
 \begin{tabular}{||c|c|c|c|c||}
 \hline
 Frequency & Wavelength & Measured $T_D$ & Computed $T_D$ & Reference\\
