--- a/model/model.tex
+++ b/model/model.tex
@@ -17,7 +17,7 @@ The following compliance function was used to calculate the number of data point
      \end{array}
    \right.
 \end{equation}
-where $\textbf{1}_{model}$ is the compliance function for each model, $\alpha_{measured}$, $\alpha_{model}$ is the measured absorption and the calculated absorption respectively. $Err_{tot}$ and $Err_{cond}$ are the systematic and conditional errors as described previously. The percentage of data points that each model encompasses can be calculated using,
+where $\textbf{1}_{model}$ is the compliance function for each model, and $\alpha_{measured}$, $\alpha_{model}$ is the measured absorption and the calculated absorption, respectively. $Err_{tot}$ and $Err_{cond}$ are the systematic and conditional errors as described previously. The percentage of data points that each model encompasses can be calculated using,
 \begin{equation}
 Per_{model} = \frac{\sum_{i=1}^N \textbf{1}_{model}(\alpha_i)}{N}\times 100\%
 \end{equation}
@@ -47,5 +47,5 @@ where $Per_{model}$ is the percentage of data points that the model fits and $N$
 \section{Suggested Model}
 Results indicate that the models for the centimeter- and millimeter-wavelength opacity from SO$_2$ in a CO$_2$ atmosphere by Suleiman et al. \cite{Suleiman-1996} and Fahd and Steffes \cite{Fahd-1991} are both valid over the entire centimeter-and millimeter-wavelength range under simulated conditions for the upper atmosphere of Venus. Based on the percentage of data consistent with the models, the suggested model is that from Fahd and Steffes \cite{Fahd-thesis}, but using the updated line catalog from Picket et al. \cite{Pickett-1998}. This model employs the Van Vleck-Weisskopf lineshape, and was developed from measurements of SO$_2$/CO$_2$ mixtures conducted at room temperature. As per their paper, we employ only the rotational line catalog to compute opacity. (JPL spectral line catalog, Pickett et al., \cite{Pickett-1998}). While both models perform well, the Fahd and Steffes \cite{Fahd-1991}  model appears to provide a slightly better fit to the overall data set. 
 
-It should also be noted that because both models were derived from measurements conducted at pressures of 6 bars or less and no allowance for the compressibility of CO$_2$ is included in these models. When performing the best-fit analysis of high-pressure data \cite{Steffes-2014}, a correction factor for compressibility was computed and entered into the models (by simply dividing the measured partial pressure of CO$_2$ by the compressibility, Z). 
+It should also be noted that because both models were derived from measurements conducted at pressures of 6 bars or less, no allowance for the compressibility of CO$_2$ is included in these models. When performing the best-fit analysis of high-pressure data \cite{Steffes-2014}, a correction factor for compressibility was computed and entered into the models (by simply dividing the measured partial pressure of CO$_2$ by the compressibility, Z). 
 
